# mdf

./: .gitignore  CHARTER.md  CONTRIBUTING.md  LICENSE  PATENTS.md  README.md  ROADMAP.md
.github/workflows/: spec-lint.yml
converter/: README.md  pdf2mdf.py  test_converter.py
examples/basic/: hello-world.mdf  rectangle-postcard.mdf
examples/color/: cmyk-swatches.mdf
examples/print-production/: spot-color-label.mdf
examples/semantics/: accessible-flyer.mdf
examples/shapes/: circle-resume.mdf  heart-invitation.mdf  hexagon-id-badge.mdf  shield-certificate.mdf  star-business-card.mdf
examples/typography/: multi-column-article.mdf
reference-impl/python/: pyproject.toml
reference-impl/python/src/mdf/: __init__.py
reference-impl/python/src/mdf/cli/: __init__.py  main.py
reference-impl/python/src/mdf/model/: __init__.py  document.py
reference-impl/python/src/mdf/parser/: __init__.py  mdf_parser.py  unit_converter.py
reference-impl/python/src/mdf/reflow/: __init__.py  shape_tessellator.py
reference-impl/python/src/mdf/renderer/: __init__.py  pdf_renderer.py  svg_renderer.py
schema/: README.md  mdf-0.1.xsd  mdf-meta-0.1.xsd  mdf-print-0.1.xsd  mdf-semantics-0.1.xsd
spec/v0.1/: 00-overview.md  01-file-structure.md  02-manifest.md  03-canvas.md  04-color-texture.md  05-typography.md  06-layers.md  07-semantics.md  08-conformance.md  09-print.md  CHANGELOG.md
tools/: mdf2pdf.py
viewer/: README.md  editor.html  index.html
