[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdf"
version = "0.1.0"
description = "Morphous Document Format — Python reference implementation"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"

dependencies = [
    "lxml>=4.9",          # XML parsing
    "Pillow>=10.0",       # Image handling
    "fonttools>=4.40",    # Font loading and inspection
    "pypdf>=4.0",         # PDF reading/manipulation
    "reportlab>=4.0",     # PDF generation (mdf render --format pdf)
    "jsonschema>=4.0",    # Manifest schema validation
    "click>=8.0",         # CLI
]

[project.optional-dependencies]
# Cairo backend (optional): enables high-quality PNG/SVG rasterization.
# Requires system libcairo-dev before pip install.
cairo = [
    "pycairo>=1.25",
    "cairosvg>=2.7",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
mdf = "mdf.cli.main:cli"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
